--- a/roles/gpdb/vars/main.yml
+++ b/roles/gpdb/vars/main.yml
@@ -4,7 +4,7 @@ google_cloud: false
 # number of Greenplum Database segments
 gpdb_number_segments: 2
 gpdb_mirror_enable: true
-gpdb_spread_mirrors: "-S"
+gpdb_spread_mirrors: ""
 
 # if you change the version, Ansible will attempt a database upgrade
 # greenplum-db-4.3.9.0-build-1-RHEL5-x86_64.zip
@@ -46,11 +46,11 @@ gpdb_spread_mirrors: "-S"
 # gpdb_rhel_name: 'RHEL5'
 
 # files/greenplum-db-5.21.0-rhel7-x86_64.zip
-# gpdb_major_version: 5
-# gpdb_minor_version: 21.0
-# gpdb_build_version:
-# gpdb_rhel_name: 'rhel7'
-# gpdb_binary_type: 'zip'
+gpdb_major_version: 5
+gpdb_minor_version: 7.1
+gpdb_build_version:
+gpdb_rhel_name: 'rhel7'
+gpdb_binary_type: 'rpm'
 
 # files/greenplum-db-4.3.29.0-rhel5-x86_64.zip
 # gpdb_major_version: 4
@@ -69,11 +69,11 @@ gpdb_spread_mirrors: "-S"
 # greenplum-db-6.0.0-rhel7-x86_64.rpm
 
 # files/greenplum-db-6.0.0-rhel7-x86_64.rpm
-gpdb_major_version: 6
-gpdb_minor_version: 0.0
-gpdb_build_version:
-gpdb_rhel_name: 'rhel7'
-gpdb_binary_type: 'rpm'
+# gpdb_major_version: 6
+# gpdb_minor_version: 0.0
+# gpdb_build_version:
+# gpdb_rhel_name: 'rhel7'
+# gpdb_binary_type: 'rpm'
 
 smdw_hostname: "smdw6"
 seg_serialized_install: False
