--- a/roles/gpcc/vars/main.yml
+++ b/roles/gpcc/vars/main.yml
@@ -1,11 +1,12 @@
 ---
 # greenplum-cc-web-6.0.0-beta.5-rhel7_x86_64.zip
+# greenplum-cc-web-6.0.0-rhel7_x86_64.zip
 # greenplum-cc-web-4.7.0-LINUX-x86_64.zip
 gpcc_major_version: 6
-gpcc_minor_version: 0.0
+gpcc_minor_version: 1.0
 # gpcc_build_version:
 # gpcc_rhel_name: LINUX-
-gpcc_rhel_name: rhel7_
+gpcc_rhel_name: gp6-rhel7-
 
 gpdb_initdb_only_single: false
 gpdb_initdb_with_standby: true
