--- a/roles/gpdb/vars/main.yml
+++ b/roles/gpdb/vars/main.yml
@@ -46,36 +46,35 @@ gpdb_spread_mirrors: ""
 # gpdb_rhel_name: 'RHEL5'
 
 # files/greenplum-db-5.21.0-rhel7-x86_64.zip
-gpdb_major_version: 5
-gpdb_minor_version: 7.1
-gpdb_build_version:
-gpdb_rhel_name: 'rhel7'
-gpdb_binary_type: 'rpm'
+#gpdb_major_version: 5
+#gpdb_minor_version: 16.0
+#gpdb_build_version:
+#gpdb_rhel_name: 'rhel7'
+#gpdb_binary_type: 'zip'
 
 # files/greenplum-db-4.3.29.0-rhel5-x86_64.zip
-# gpdb_major_version: 4
-# gpdb_minor_version: 3.29.0
-# gpdb_build_version:
-# gpdb_rhel_name: 'rhel5'
-# gpdb_binary_type: 'zip'
+gpdb_major_version: 4
+gpdb_minor_version: 3.33.3
+gpdb_build_version:
+gpdb_rhel_name: 'rhel5'
+gpdb_binary_type: 'zip'
 
 # files/greenplum-db-5.20.1-rhel7-x86_64
-# gpdb_major_version: 5
-# gpdb_minor_version: 19.0
-# gpdb_build_version:
-# gpdb_rhel_name: 'rhel7'
-# gpdb_binary_type: 'zip'
+#gpdb_major_version: 5
+##gpdb_minor_version: 16.0
+#gpdb_build_version:
+#gpdb_rhel_name: 'rhel7'
+#gpdb_binary_type: 'zip'
 
 # greenplum-db-6.0.0-rhel7-x86_64.rpm
-
 # files/greenplum-db-6.0.0-rhel7-x86_64.rpm
-# gpdb_major_version: 6
-# gpdb_minor_version: 0.0
-# gpdb_build_version:
-# gpdb_rhel_name: 'rhel7'
-# gpdb_binary_type: 'rpm'
+#gpdb_major_version: 6
+#gpdb_minor_version: 1.0
+#gpdb_build_version:
+#gpdb_rhel_name: 'rhel7'
+#gpdb_binary_type: 'rpm'
 
-smdw_hostname: "smdw6"
+smdw_hostname: "smdw4"
 seg_serialized_install: False
 gpdb_initdb_single: False
 gpdb_initdb_with_standby: True
