--- a/roles/gptext/tasks/redhat.yml
+++ b/roles/gptext/tasks/redhat.yml
@@ -89,11 +89,11 @@
 - block:
   - name: Untar Greenplum Text archive (Ansible < 2.2)
     unarchive: src=/home/gpadmin/{{ binary_installer_file }}.tar.gz dest=/home/gpadmin/gptext-tmp-install remote_src=yes copy=no owner=gpadmin group=gpadmin
-    when: ansible_version.full | version_compare('2.2.0.0', operator='<', strict=False)
+    when: ansible_version.full is version_compare('2.2.0.0', operator='<', strict=False)
 
   - name: Untar Greenplum Text archive (Ansible >= 2.2)
     unarchive: src=/home/gpadmin/{{ binary_installer_file }}.tar.gz dest=/home/gpadmin/gptext-tmp-install remote_src=yes owner=gpadmin group=gpadmin
-    when: ansible_version.full | version_compare('2.2.0.0', operator='>=', strict=False)
+    when: ansible_version.full is version_compare('2.2.0.0', operator='>=', strict=False)
 
   when:
     - gptext_install == True or gptext_upgrade == True
@@ -150,10 +150,11 @@
     - { regexp: '^declare -a GPTEXT_HOSTS=', line: 'declare -a GPTEXT_HOSTS=( {{ gptext_all_hosts }} )', state: present }
     - { regexp: '^#GPTEXT_HOSTS=', line: 'GPTEXT_HOSTS=ALLSEGHOSTS', state: present }
     - { regexp: '^declare -a ZOO_HOSTS=', line: 'declare -a ZOO_HOSTS=( {{ gptext_all_hosts }} )', state: present }
-    - { regexp: '^#### OPTIONAL', line: 'JAVA_HOME=/usr/lib/jvm/java-{{ gptext_java_version }}', state: present }
+    - { regexp: '^#### OPTIONAL', line: 'GPTEXT_JAVA_HOME=/usr/lib/jvm/java-{{ gptext_java_version }}', state: present }
   when:
     - inventory_hostname in groups['master']
     - gptext_install == True or gptext_upgrade == True
+      # - { regexp: '^#### OPTIONAL', line: 'JAVA_HOME=/usr/lib/jvm/java-{{ gptext_java_version }}', state: present }
 
 - name: Install Greenplum Text software in {{ gptext_base_dir }}
   become_user: gpadmin
@@ -203,7 +204,7 @@
 - name: Start ZkManager
   become_user: gpadmin
   shell: ( . {{ gpdb_base_dir }}/greenplum-db/greenplum_path.sh && . {{ gptext_base_dir }}/greenplum-text/greenplum-text_path.sh && zkManager start )
-  async: 60
+  async: 300
   poll: 5
   register: gptext_zkmanager_started
   when: inventory_hostname in groups['master']
@@ -211,7 +212,7 @@
 - name: Start GPText
   become_user: gpadmin
   shell: ( . {{ gpdb_base_dir }}/greenplum-db/greenplum_path.sh && . {{ gptext_base_dir }}/greenplum-text/greenplum-text_path.sh && gptext-start )
-  async: 60
+  async: 300
   poll: 5
   register: gptext_started
   when: inventory_hostname in groups['master']
