--- a/roles/gptext/vars/main.yml
+++ b/roles/gptext/vars/main.yml
@@ -1,11 +1,12 @@
 ---
 # greenplum-text-3.3.1-rhel7_x86_64.tar.gz
 gptext_major_version: 3
-gptext_minor_version: 3.1
+gptext_minor_version: 3.0
 gptext_patch_version:
 gptext_build_version:
 gptext_gpdb_version:
 gptext_java_version: 1.8.0
-gptext_rhel_name: rhel7
+gptext_rhel_name: rhel6
 gptext_database_name: testdb
-gptext_all_hosts: "mdw6 smdw6 sdw6-01 sdw6-02 sdw6-03"
+gptext_all_hosts: "mdw4 smdw4 sdw4-01 sdw4-02 sdw4-03 sdw4-04 sdw4-05"
+# gptext_all_hosts: "mdw6 smdw6 sdw6-01 sdw6-02 sdw6-03"
